# URL-alias-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
app/: __init__.py  main.py
app/api/endpoints/: url.py
app/api/v1/: router.py
app/api/v1/endpoints/: redirect.py  urls.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
app/models/: url.py
app/schemas/: url.py
app/services/: url.py
tests/: conftest.py  test_urls.py
